# PyQuantAlpha

./: .env.example  .gitignore  README.md  debug_output.txt  debug_output_2.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_output.txt
.agent/rules/: python.md
data/: market_data.db  market_data.db-shm  market_data.db-wal
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BACKTRADER_COMPARISON_REPORT.md  BUG_FIXES.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  ETHEREUM_FUSAKA_REPORT.md  FEASIBILITY_REPORT.md  FINANCIAL_CONCEPTS.md  IMPLEMENTATION_PLAN.md
docs/phase1/: IMPLEMENTATION_PLAN.md  STEP10_ADVANCED_FEATURES.md  STEP2_DATA_LAYER.md  STEP3_API_SKELETON.md  STEP4_AI_STRATEGY.md  STEP5_INDICATOR_LIBRARY.md  STEP6_BACKTEST_ENGINE.md  STEP7_API_REFINEMENT.md  STEP8_FRONTEND.md  STEP9_INTEGRATION_TESTING.md  SUMMARY.md
docs/phase2/: ROADMAP.md  STEP1_LOGGING.md  STEP2_BROKER_ORDERS.md  STEP3_ARCHITECTURE_OPTIMIZATION.md  STEP4_MULTI_ASSET_ADAPTATION.md  SUMMARY.md
docs/phase3/: ROADMAP.md  STEP1_DATABASE_INTEGRATION.md  STEP2_DATA_ENRICHMENT.md  STEP3_ENGINE_FORTIFICATION.md  STEP4_EVALUATION_AND_CONFIG.md  STEP5_VISUALIZATION_ENHANCEMENT.md  SUMMARY.md
docs/phase3.5/: ROADMAP.md
docs/phase4/: ROADMAP.md
reports/: e2e_test_report_20251226_160510.md  e2e_test_report_20251226_162625.md  e2e_test_report_20251226_181636.md  e2e_test_report_20251226_182322.md  e2e_test_report_20251226_183644.md  e2e_test_report_20251227_133534.md  e2e_test_report_20251227_134304.md
src/: __init__.py
src/ai/: __init__.py  base.py  deepseek.py  factory.py  openai_client.py  prompt.py  validator.py
src/api/: __init__.py  main.py
src/backtest/: __init__.py  analyzer.py  broker.py  commission.py  engine.py  feed.py  loader.py  logger.py  manager.py  models.py  strategy.py
src/config/: settings.py
src/core/: logging.py
tests/: conftest.py
(+101 files in other folders)
